--- a/src/Components/Games/Concentration/Concentration.css
+++ b/src/Components/Games/Concentration/Concentration.css
@@ -11,9 +11,9 @@ body {
   padding: 0;
 }
 
-#root {
-  height: 100%;
-}
+/* #root {
+  height: 80%;
+} */
 
 .Concentration {
   height: 100%;
@@ -35,15 +35,22 @@ body {
     linear-gradient(45deg, rgba(190, 146, 146, 0.2), rgba(0, 0, 0, 0.2));
 }
 
+.con-wrap {
+  height: fit-content;
+  text-align: center;
+  margin: 3rem;
+}
+
 .game-board {
   perspective: 600px;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  gap: 20px;
-  width: 60%;
+  gap: 1%;
+  width: 100%;
   height: 100%;
-  min-width: 30rem;
+  min-width: 60em;
+  max-width: 100em;
   /* border: solid black 3px; */
   padding: 0;
   /* margin-bottom: 1%; */
@@ -89,6 +96,7 @@ body {
   font-weight: 300;
   font-style: normal;
   position: absolute;
+  color: blanchedalmond;
 }
 
 .con-btn:hover {
