--- a/src/Components/Shop/CSS/Footer.css
+++ b/src/Components/Shop/CSS/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color);
   color: var(--primary-color);
   padding: 1rem;
   text-align: right;
@@ -13,6 +13,8 @@
 .about {
   width: 80vw;
   padding: 1rem;
+  font-size: smaller;
+  color: var(--text-color);
 }
 
 .shop-button {
@@ -24,6 +26,7 @@
   border-radius: 5px;
   cursor: pointer;
   margin: 1rem;
+
   transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
@@ -38,18 +41,18 @@
   position: relative;
   /* box-shadow: 0 4px 8px rgba(193, 193, 193, 0.916); */
   border-radius: 10px;
+  /* border: solid olive 1px; */
 }
 
 .banner-image {
   position: absolute;
-
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   object-fit: contain;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(37, 37, 37, 0.1);
+  /* box-shadow: 0 4px 8px rgba(37, 37, 37, 0.1); */
   opacity: 0;
   transition: opacity 1s ease-in-out;
   pointer-events: none;
