--- a/src/Components/Home/Resume/Resume.css
+++ b/src/Components/Home/Resume/Resume.css
@@ -9,6 +9,16 @@
   color: #333;
 }
 
+.dl-icon {
+  height: 2rem;
+  cursor: pointer;
+  margin: 2px;
+}
+
+.dl-icon:hover {
+  border: solid rgb(255, 255, 255) 2px;
+}
+
 .resume-header {
   text-align: center;
   margin-bottom: 20px;
