--- a/src/Components/Shop/CSS/Cart.css
+++ b/src/Components/Shop/CSS/Cart.css
@@ -166,6 +166,36 @@
 @media (max-width: 768px) {
   .Cart {
     width: 95%;
-    padding: 20px;
+    padding: 15px;
+    max-height: 80vh;
+  }
+
+  .cart-img {
+    height: 3rem;
+  }
+
+  .Cart li {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .item-details {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+
+  .Cart li button {
+    margin-left: 0;
+    margin-top: 10px;
+    align-self: flex-end;
+  }
+
+  .past-purchases li {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .purchase-price {
+    margin-top: 5px;
   }
 }
