--- a/src/Components/Shop/CSS/Header.css
+++ b/src/Components/Shop/CSS/Header.css
@@ -14,16 +14,16 @@
 .e-logo {
   height: 18rem;
   filter: invert(0.8);
-  /* margin-right: 10%; */
 }
 
 @media (max-width: 768px) {
   .header {
-    flex-direction: column;
-    align-items: center;
+    height: auto;
+    padding: 1rem;
+    border-bottom-width: 1.5rem;
   }
 
   .e-logo {
-    margin-bottom: 1rem;
+    height: 10rem;
   }
 }
